Finished setting up the easy level for the game; other levels will be added later

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h2>Difficulty And Sign</h2>
             <div class="difficultySigns wrapper">
                 <select id="difficulty">
-                    <option value="easy">Easy</option>
-                    <option value="medium">Medium</option>
-                    <option value="hard">Hard</option>
-                    <option value="unbeatable">Unbeatable</option>
+                    <option value="Easy">Easy</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Hard">Hard</option>
+                    <option value="Unbeatable">Unbeatable</option>
                 </select>
                 <div id="signs">
                     <button id="X" class="selected greenColor">X</button>
